--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -332,36 +332,28 @@ android:exported="false" />
 
 - 前台服务
 
-　　前台服务是指那些经常会被用户关注的服务，因此内存过低时它不会成为被杀的对象。 前台服务必须提供一个状态栏通知，并会置于“正在进行的”（“Ongoing”）组之下。这意味着只有在服务被终止或从前台移除之后，此通知才能被解除。 　　例如，用服务来播放音乐的播放器就应该运行在前台，因为用户会清楚地知晓它的运行情况。 状态栏通知可能会标明当前播放的歌曲，并允许用户启动一个activity来与播放器进行交互。
+　　前台服务是指那些经常会被用户关注的服务，因此内存过低时它不会成为被杀的对象。 前台服务必须提供一个状态栏通知，并会置于“正在进行的”（“Ongoing”）组之下。这意味着只有在服务被终止或从前台移除之后，此通知才能被解除。例如，用服务来播放音乐的播放器就应该运行在前台，因为用户会清楚地知晓它的运行情况。 状态栏通知可能会标明当前播放的歌曲，并允许用户启动一个activity来与播放器进行交互。
 
-　　要把你的服务请求为前台运行，可以调用startForeground()方法。此方法有两个参数：唯一标识通知的整数值、状态栏通知Notification对象。例如：
+　　要把你的服务请求为前台运行，可以调用**startForeground()**方法。此方法有两个参数：唯一标识通知的整数值、状态栏通知Notification对象。例如：
 
 ```java
 Notification notification = new Notification(R.drawable.icon, getText(R.string.ticker_text),System.currentTimeMillis());
-
 Intent notificationIntent = new Intent(this,ExampleActivity.class);
-
 PendingIntent pendingIntent = PendingIntent.getActivity(this, 0, notificationIntent, 0);
-
 notification.setLatestEventInfo(this, getText(R.string.notification_title),
-        getText(R.string.notification_message), pendingIntent);
-        
+        getText(R.string.notification_message), pendingIntent);  
 startForeground(ONGOING_NOTIFICATION, notification);
 ```
 
-　　要从前台移除服务，请调用stopForeground()方法，这个方法接受个布尔参数，表示是否同时移除状态栏通知。此方法不会终止服务。不过，如果服务在前台运行时被你终止了，那么通知也会同时被移除。
+　　要从前台移除服务，请调用**stopForeground()**方法，这个方法接受个布尔参数，表示是否同时移除状态栏通知。此方法不会终止服务。不过，如果服务在前台运行时被你终止了，那么通知也会同时被移除。
 
 - 后台服务
 
 **2. 按使用分类**　　
 
-- 本地服务
+- **本地服务**：用于应用程序内部，实现一些耗时任务，并不占用应用程序比如Activity所属线程，而是单开线程后台执行。调用Context.startService()启动，调用Context.stopService()结束。在内部可以调用Service.stopSelf() 或 Service.stopSelfResult()来自己停止。
 
-　　用于应用程序内部，实现一些耗时任务，并不占用应用程序比如Activity所属线程，而是单开线程后台执行。 　　调用Context.startService()启动，调用Context.stopService()结束。在内部可以调用Service.stopSelf() 或 Service.stopSelfResult()来自己停止。
-
-- 远程服务
-
-　　用于Android系统内部的应用程序之间，可被其他应用程序复用，比如天气预报服务，其他应用程序不需要再写这样的服务，调用已有的即可。可以定义接口并把接口暴露出来，以便其他应用进行操作。客户端建立到服务对象的连接，并通过那个连接来调用服务。调用Context.bindService()方法建立连接，并启动，以调用 Context.unbindService()关闭连接。多个客户端可以绑定至同一个服务。如果服务此时还没有加载，bindService()会先加载它。
+- **远程服务**：用于Android系统内部的应用程序之间，可被其他应用程序复用，比如天气预报服务，其他应用程序不需要再写这样的服务，调用已有的即可。可以定义接口并把接口暴露出来，以便其他应用进行操作。客户端建立到服务对象的连接，并通过那个连接来调用服务。调用Context.bindService()方法建立连接，并启动，以调用 Context.unbindService()关闭连接。多个客户端可以绑定至同一个服务。如果服务此时还没有加载，bindService()会先加载它。
 
 ##### [4] Service生命周期
 
@@ -416,7 +408,7 @@ public class ExampleService extends Service {
 
 > 请注意onStartCommand()方法必须返回一个整数。这个整数是描述系统在杀死服务之后应该如何继续运行。onStartCommand()的返回值必须是以下常量之一：
 
-> START_NOT_STICKY 　 如果系统在onStartCommand()返回后杀死了服务，则不会重建服务了，除非还存在未发送的intent。 当服务不再是必需的，并且应用程序能够简单地重启那些未完成的工作时，这是避免服务运行的最安全的选项。　 　 START_STICKY 如果系统在onStartCommand()返回后杀死了服务，则将重建服务并调用onStartCommand()，但不会再次送入上一个intent， 而是用null intent来调用onStartCommand() 。除非还有启动服务的intent未发送完，那么这些剩下的intent会继续发送。 这适用于媒体播放器（或类似服务），它们不执行命令，但需要一直运行并随时待命。　
+> START_NOT_STICKY 如果系统在onStartCommand()返回后杀死了服务，则不会重建服务了，除非还存在未发送的intent。 当服务不再是必需的，并且应用程序能够简单地重启那些未完成的工作时，这是避免服务运行的最安全的选项。START_STICKY 如果系统在onStartCommand()返回后杀死了服务，则将重建服务并调用onStartCommand()，但不会再次送入上一个intent， 而是用null intent来调用onStartCommand() 。除非还有启动服务的intent未发送完，那么这些剩下的intent会继续发送。 这适用于媒体播放器（或类似服务），它们不执行命令，但需要一直运行并随时待命。　
 
 > START_REDELIVER_INTENT 如果系统在onStartCommand()返回后杀死了服务，则将重建服务并用上一个已送过的intent调用onStartCommand()。任何未发送完的intent也都会依次送入。这适用于那些需要立即恢复工作的活跃服务，比如下载文件。
 
@@ -426,13 +418,13 @@ public class ExampleService extends Service {
 
 - **一个started服务**
 
-　　这类服务由其它组件调用startService()来创建。然后保持运行，且必须通过调用stopSelf()自行终止。其它组件也可通过调用stopService() 终止这类服务。服务终止后，系统会把它销毁。
+　　这类服务由其它组件调用startService()来创建。然后保持运行，且**必须通过调用stopSelf()自行终止**。其它组件也可通过调用stopService() 终止这类服务。服务终止后，系统会把它销毁。
 
-　　如果一个Service被startService 方法多次启动，那么onCreate方法只会调用一次，onStart将会被调用多次（对应调用startService的次数），并且系统只会创建Service的一个实例（因此你应该知道只需要一次stopService调用）。该Service将会一直在后台运行，而不管对应程序的Activity是否在运行，直到被调用stopService，或自身的stopSelf方法。当然如果系统资源不足，android系统也可能结束服务。
+　　如果一个Service被startService 方法多次启动，那么onCreate方法只会调用一次，onStart将会被调用多次（对应调用startService的次数），并且**系统只会创建Service的一个实例**（因此你应该知道只需要一次stopService调用）。该Service将会一直在后台运行，而不管对应程序的Activity是否在运行，直到被调用stopService，或自身的stopSelf方法。当然如果系统资源不足，android系统也可能结束服务。
 
 - **一个bound服务**
 
-　　服务由其它组件（客户端）调用bindService()来创建。然后客户端通过一个IBinder接口与服务进行通信。客户端可以通过调用unbindService()来关闭联接。多个客户端可以绑定到同一个服务上，当所有的客户端都解除绑定后，系统会销毁服务。（服务不需要自行终止。）
+　　服务由其它组件（客户端）调用bindService()来创建。然后客户端通过一个**IBinder接口与服务进行通信**。客户端可以通过调用unbindService()来关闭联接。多个客户端可以绑定到同一个服务上，当所有的客户端都解除绑定后，系统会销毁服务。（服务不需要自行终止。）
 
 　　如果一个Service被某个Activity 调用 Context.bindService 方法绑定启动，不管调用 bindService 调用几次，onCreate方法都只会调用一次，同时onStart方法始终不会被调用。当连接建立之后，Service将会一直运行，除非调用Context.unbindService 断开连接或者之前调用bindService 的 Context 不存在了（如Activity被finish的时候），系统将会自动停止Service，对应onDestroy将被调用。
 
@@ -478,14 +470,14 @@ Service 元素的属性有：
 
 　　从activity或其它应用程序组件中可以启动一个服务，调用startService()并传入一个Intent（指定所需启动的服务）即可。
 
-```
+```java
 	Intent intent = new Intent(this, MyService.class);
 	startService(intent);
 ```
 
 服务类：
 
-```
+```java
 public class MyService extends Service {
 
 	  /**
@@ -656,6 +648,901 @@ private boolean isServiceRunning() {
     return false;
 }
 ```
+
+##### [5] [bindService与startService区别](https://www.cnblogs.com/yesphet/p/4766786.html)
+
+1. Started Service中使用startService（）方法来进行方法的调用，调用者和服务之间没有联系，即使调用者退出了，服务依然在进行 【onCreate()-  >onStartCommand()->startService()->onDestroy()】，注意其中没有 onStart()，主要是被onStartCommand()方法给取代了，onStart方法不推荐使用了。
+2. BindService中使用bindService()方法来绑定服务，调用者和绑定者绑在一起，调用者一旦退出服务也就终止了【onCreate()->onBind()->onUnbind()->onDestroy()】。
+
+##### [6] IntentService详细解析
+
+1. **IntentService定义**
+
+　　IntentService继承于Service，用来处理异步请求。客户端可以通过startService(Intent)方法传递请求给IntentService。IntentService在onCreate()函数中通过HandlerThread单独开启一个线程来依次处理所有Intent请求对象所对应的任务。这样以免事务处理阻塞主线程（ＡＮＲ）。执行完所一个Intent请求对象所对应的工作之后，如果没有新的Intent请求达到，则**自动停止**Service；否则执行下一个Intent请求所对应的任务。　 　　    IntentService在处理事务时，还是采用的Handler方式，创建一个名叫ServiceHandler的内部Handler，并把它直接绑定到HandlerThread所对应的子线程。 ServiceHandler把处理一个intent所对应的事务都封装到叫做**onHandleIntent**的虚函数；因此我们直接实现虚函数onHandleIntent，再在里面根据Intent的不同进行不同的事务处理就可以了。 另外，IntentService默认实现了Onbind（）方法，返回值为null。
+
+使用IntentService需要实现的两个方法： 　　
+
+- **构造函数**　
+
+　　IntentService的构造函数一定是**参数为空**的构造函数，然后再在其中调用super("name")这种形式的构造函数。因为Service的实例化是系统来完成的，而且系统是用参数为空的构造函数来实例化Service的
+
+- **实现虚函数onHandleIntent**
+
+　　在里面根据Intent的不同进行不同的事务处理。好处：处理异步请求的时候可以减少写代码的工作量，比较轻松地实现项目的需求。
+
+2. **IntentService与Service的区别**
+
+　　Service不是独立的进程，也不是独立的线程，它是依赖于应用程序的主线程的，不建议在Service中编写耗时的逻辑和操作，否则会引起ANR。
+
+　　IntentService 它创建了一个独立的工作线程来处理所有的通过onStartCommand()传递给服务的intents（把intent插入到工作队列中）。通过工作队列把intent逐个发送给onHandleIntent()。不需要主动调用stopSelft()来结束服务。因为，在所有的intent被处理完后，系统会自动关闭服务。
+
+　　 默认实现的onBind()返回null。
+
+3. **IntentService实例介绍**
+
+　　首先是myIntentService.java
+
+```java
+public class myIntentService extends IntentService {
+
+	//------------------必须实现-----------------------------
+	
+	public myIntentService() {
+		super("myIntentService");
+		// 注意构造函数参数为空，这个字符串就是worker thread的名字
+	}
+
+	@Override
+	protected void onHandleIntent(Intent intent) {
+		//根据Intent的不同进行不同的事务处理 
+        String taskName = intent.getExtras().getString("taskName");  
+        switch (taskName) {
+		case "task1":
+			Log.i("myIntentService", "do task1");
+			break;
+		case "task2":
+			Log.i("myIntentService", "do task2");
+			break;
+		default:
+			break;
+		}		
+	}
+  //--------------------用于打印生命周期--------------------	
+   @Override
+  public void onCreate() {
+		Log.i("myIntentService", "onCreate");
+	super.onCreate();
+}
+	
+	@Override
+	public int onStartCommand(Intent intent, int flags, int startId) {
+		Log.i("myIntentService", "onStartCommand");
+		return super.onStartCommand(intent, flags, startId);
+	}
+	
+	@Override
+	public void onDestroy() {
+		Log.i("myIntentService", "onDestroy");
+		super.onDestroy();
+	}
+}
+```
+
+然后记得在Manifest.xml中注册服务
+
+```java
+ <service android:name=".myIntentService">
+            <intent-filter >  
+                <action android:name="cn.scu.finch"/>  
+            </intent-filter>     
+        </service>
+```
+
+最后在Activity中开启服务
+
+```java
+public class MainActivity extends Activity {
+	@Override
+	protected void onCreate(Bundle savedInstanceState) {
+		// TODO Auto-generated method stub
+		super.onCreate(savedInstanceState);
+		
+		//同一服务只会开启一个worker thread，在onHandleIntent函数里依次处理intent请求。
+		
+        Intent i = new Intent("cn.scu.finch");  
+        Bundle bundle = new Bundle();  
+        bundle.putString("taskName", "task1");  
+        i.putExtras(bundle);  
+        startService(i);  
+           
+        Intent i2 = new Intent("cn.scu.finch");  
+        Bundle bundle2 = new Bundle();  
+        bundle2.putString("taskName", "task2");  
+        i2.putExtras(bundle2);  
+        startService(i2); 
+        
+        startService(i);  //多次启动
+	}
+}
+```
+
+运行结果：
+
+[![这里写图片描述](https://camo.githubusercontent.com/fb6bf8fc2ff7c1713ef558183b6ab0f47cb846e3/687474703a2f2f696d672e626c6f672e6373646e2e6e65742f3230313630353133313335343131303337)](https://camo.githubusercontent.com/fb6bf8fc2ff7c1713ef558183b6ab0f47cb846e3/687474703a2f2f696d672e626c6f672e6373646e2e6e65742f3230313630353133313335343131303337)　
+
+　　IntentService在onCreate()函数中通过HandlerThread单独开启一个线程来依次处理所有Intent请求对象所对应的任务。通过onStartCommand()传递给服务intent被**依次**插入到工作队列中。工作队列又把intent逐个发送给onHandleIntent()。
+
+> 注意： 它只有一个工作线程，名字就是构造函数的那个字符串，也就是“myIntentService”，我们知道多次开启service，只会调用一次onCreate方法（创建一个工作线程），多次onStartCommand方法（用于传入intent通过工作队列再发给onHandleIntent函数做处理）。
+
+##### [7] IntentService——Handler与Service的结合 
+
+**综述**
+
+　　我们都知道Service是作为后台服务运行再程序中的。但是Service他依然是运行在主线程中的，所以我们依然不能在Service中进行耗时的操作。所以当我们在Service处理时，我们需要在Service中开启一个子线程，并且在子线程中运行。当然为了简化我们的操作，在Android中为我们提供了IntentService来进行这一处理，下面我们就来看一下这个IntentService用法以及它的工作原理。
+
+**用法简介**
+
+　　IntentService它继承自Service，一来说我们开启一个Service可以通过startService和bindService两个方式进行开启一个服务，但是对于IntentService我们采用startService方法进行开启服务，对于为什么要这么做，在后面会进行分析讲解。下面我们来看一下如何使用这个IntentService的。
+
+**效果演示**
+
+　　在这里我们做一个倒计时的程序，以毫秒为单位。这里先看一下效果演示。 
+
+​                                                ![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTpy8CspBHm5RjmJsZbU6YsKibeaWobtRBCg7ahv5g76bqR8TosABUmDA/0?wx_fmt=gif&tp=webp&wxfrom=5&wx_lazy=1)
+
+**代码分析**
+
+　　在这里我们使用到了开源框架EventBus，对于EventBus的使用可以参考 EventBus3.0使用详解这篇文章。由于我们用到这EventBus,首先我们创建一个实体类，在EventBus中进行发送，接收处理。
+
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTkzbscibibDjE0rNJxRhpCgmk7xcZrkkWl3tlu1UWsmibfX3nJ93FlAVCw/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+下面我们看一下IntentService中的代码。
+
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTO8QD9S1YNfsbpseDhazeHJLplSvQv4xiaS6PjRne1AmC2rT5lkFhmCw/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSThDRPckUxibsNm9yicNEL07HEMW8NFic1dP3ehWYMt2S5VjPFCWejrK4Yg/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+    在上面的handleActionFoo方法中进行我们的耗时任务。然后我们在看一下Activity中的代码。
+
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTwRIh3HDECYkicHnkUIB8SjanSUW59HrKBaNNbc6djlYUHu0pJDPupkA/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTTTiaDiacJZZmJTCbmBKRuHItpUV1pbrictSPx0oAiaEsia9sH22CdWLSb4Q/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+　　最后是布局代码。
+
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTXoG5nZJrnP1Exh0KUFjriaVqEInkokB2ZdvLqTdYgz74yRl3mZSSmqw/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+　　对于上面代码实现起来都是非常的简单，在这里就不在进行详细介绍。
+
+**IntentService工作原理分析**
+
+　　其实对于IntentService的工作原理也不复杂，既然在IntentService中能够进行耗时操作，也就是说在这个IntentService中必然也创建了一个子线程，在Android中我们称为工作者线程。然后在这个工作者线程中进行我们的任务。在分析IntentService之前，我们先看一下HandlerThread。
+
+**HandlerThread**
+
+　　其实HandlerThread就是一个工作者线程，在这里看一下HandlerThread的源码。
+
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTepsCEdZwVLB1fibYxF4RKttibspqmCrg2AcrsyiaibXibSUkn92aWOf86yA/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)　　![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTKkbVSAAU3nkPr7Uybk9pBznvdejYPMZ6uwLAyNJ006t6EMXY6ib8ViaA/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+​    看过上篇文章 Android的消息机制——Handler的工作过程就很容易理解这个HandlerThread了。还记的我们在上篇文章的最后，新建了一个包含Looper的子线程。而这个HandlerThread也就是一个包含Looper的子线程。所以当我们需要创建一个包含Looper的线程时直接使用HandlerThread即可。对于HandlerThread有以下几点需要说明一下。 
+
+　　1. 在构造方法中设置线程优先级的时候，使用的Process是android.os包中的而不是java.lang包内的。 
+　　2. 如果在Looper开启消息循环之前我们进行一些设置，我们可以继承HandlerThread并且重写onLooperPrepared方法。 
+　　3. 通过getLooper方法我们获取HandlerThread的Looper对象时，有可能Looper还未创建完成。所以在getLooper中未创建Looper是进行了线程等待操作，在创建完Looper以后在返回Looper对象。
+
+**IntentService**
+
+　　下面我们再看一下IntentService。
+
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTKvgBvpPOQ2jF5pxJO2cQ0bJnm55xSO7K4EW6m62Zavjadb2hB2JNzw/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+![img](http://mmbiz.qpic.cn/mmbiz/ibuh47bPhianYgmJ0lbibDDuMmxjwQMlxSTxhw7cqTxFtMs3Y6QvTmRUAjHpDZQFzfVHqEVqowTS0g1RBP1WkxzXg/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+
+　　我们看一下这个IntentService的构造是不是很简单。在这里主要看一下onCreate和onStart方法即可。在onCreate中，我们开启了一个HandlerThread线程，之后获取HandlerThread线程中的Looper，并通过这个Looper创建了一个Handler。然后在onStart方法中通过这个Handler将intent与startId作为Message的参数进行发送到消息队列中，然后交由Handler中的handleMessage中进行处理。由于在onStart方法是在主线程内运行的，而Handler是通过工作者线程HandlerThread中的Looper创建的。所以也就是在主线程中发送消息，在工作者接收到消息后便可以进行一些耗时的操作。 
+　　我们在看一下handleMessage中的操作，在handleMessage中调用onHandleIntent方法，他是一个抽象方法，所以在我们的Service中复写onHandleIntent方法并且将耗时的操作写在onHandleIntent方法内即可。当执行完onHandleIntent后通过stopSelf来停止服务，这样就不用我们手动停止服务了。所以也就回答了我们上面那个为什么要使用startService而不用onBind来开启一个IntentService。
+
+**总结**
+
+　　从我们的示例和源码分析中可以看出来。对于通过IntentService来执行任务，他是串行的。也就是说只有在上一个任务执行完以后才会执行下一个任务。因为Handler中将消息插入消息队列，而队列又是先进先出的数据结构。所以只有在上个任务执行完成以后才能够获取到下一个任务进行操作。在这里也就说明了对于高并发的任务同过IntentService是不合适.
+
+## 【ContentProvider详解】
+
+##### [1] ContentProvider是什么？
+
+　　**ContentProvider（内容提供者）是Android的四大组件之一**，管理android以结构化方式存放的数据，以相对安全的方式封装数据（表）并且提供简易的处理机制和统一的访问接口供**其他程序**调用。Android的数据存储方式总共有五种，分别是：**Shared Preferences、网络存储、文件存储、外储存储、SQLite**。但一般这些存储都只是在单独的一个应用程序之中达到一个数据的共享，有时候**我们需要操作其他应用程序的一些数据，就会用到ContentProvider**。而且Android为常见的一些数据提供了默认的ContentProvider（包括音频、视频、图片和通讯录等）。
+
+　　但注意**ContentProvider它也只是一个中间人**，真正操作的数据源可能是数据库，也可以是文件、xml或网络等其他存储方式。
+
+##### [2] URL
+
+　　URL（统一资源标识符）代表要操作的数据，可以用来标识每个ContentProvider，这样你就可以通过指定的URI找到想要的ContentProvider, 从中获取或修改数据。在Android中URI的格式如下图所示：
+
+[![这里写图片描述](https://camo.githubusercontent.com/1e138aeb9ce10fa4b788b18659fae3d8d29da73a/687474703a2f2f696d672e626c6f672e6373646e2e6e65742f3230313630353035313534333232303435)](https://camo.githubusercontent.com/1e138aeb9ce10fa4b788b18659fae3d8d29da73a/687474703a2f2f696d672e626c6f672e6373646e2e6e65742f3230313630353035313534333232303435)　
+
+　　
+
+- Ａ： schema，已经由Android所规定为：content://．　 　　　
+- Ｂ：主机名（Authority），是URI的授权部分，是唯一标识符，用来定位ContentProvider。
+
+> Ｃ部分和D部分：是每个ContentProvider内部的路径部分
+
+- Ｃ：指向一个对象集合，一般用表的名字，如果没有指定D部分，则返回全部记录。
+
+- Ｄ：指向特定的记录，这里表示操作user表id为7的记录。如果要操作user表中id为7的记录的name字段， D部分变为       **/7/name**即可。
+
+> URI模式匹配通配符
+>
+> *：匹配的任意长度的任何有效字符的字符串。
+>
+> ＃：匹配的任意长度的数字字符的字符串。
+>
+> 如：
+>
+> content://com.example.app.provider/* 匹配provider的任何内容url
+>
+> content://com.example.app.provider/table3/# 匹配table3的所有行
+
+**2.１MIME**
+
+　　MIME是指定某个扩展名的文件用一种应用程序来打开，就像你用浏览器查看PDF格式的文件，浏览器会选择合适的应用来打开一样。Android中的工作方式跟HTTP类似，ContentProvider会根据URI来返回MIME类型，ContentProvider会返回一个包含两部分的字符串。MIME类型一般包含两部分，如：
+
+> text/html text/css text/xml application/pdf
+
+　　分为类型和子类型，Android遵循类似的约定来定义MIME类型，每个内容类型的Android MIME类型有两种形式：多条记录（集合）和单条记录。
+
+　　集合记录：
+
+```
+vnd.android.cursor.dir/自定义
+```
+
+　　单条记录：
+
+```
+vnd.android.cursor.item/自定义
+```
+
+　　vnd表示这些类型和子类型具有非标准的、供应商特定的形式。Android中类型已经固定好了，不能更改，只能区别是集合还是单条具体记录，子类型可以按照格式自己填写。在使用Intent时，会用到MIME，根据Mimetype打开符合条件的活动。
+
+　　下面分别介绍Android系统提供了两个用于操作Uri的工具类：ContentUris和UriMatcher。
+
+**2.２ ContentUris**
+
+　　ContetnUris包含一个便利的函数withAppendedId()来向URI追加一个id。
+
+```
+Uri uri = Uri.parse("content://cn.scu.myprovider/user")
+Uri resultUri = ContentUris.withAppendedId(uri, 7); 
+
+//生成后的Uri为：content://cn.scu.myprovider/user/7
+```
+
+　　同时提供parseId(uri)方法用于从URL中获取ID:
+
+```
+Uri uri = Uri.parse("content://cn.scu.myprovider/user/7")
+long personid = ContentUris.parseId(uri);
+//获取的结果为:7
+```
+
+**2.３UriMatcher**
+
+　　UriMatcher本质上是一个文本过滤器，用在contentProvider中帮助我们过滤，分辨出查询者想要查询哪个数据表。
+
+　　举例说明：
+
+- 第一步，初始化：
+
+```
+UriMatcher matcher = new UriMatcher(UriMatcher.NO_MATCH);
+//常量UriMatcher.NO_MATCH表示不匹配任何路径的返回码
+```
+
+- 第二步，注册需要的Uri：
+
+```
+//USER 和 USER_ID是两个int型数据
+matcher.addURI("cn.scu.myprovider", "user", USER);
+matcher.addURI("cn.scu.myprovider", "user/#",USER_ID);
+//如果match()方法匹配content://cn.scu.myprovider/user路径，返回匹配码为USER
+```
+
+- 第三部，与已经注册的Uri进行匹配:
+
+```
+/* 
+     * 如果操作集合，则必须以vnd.android.cursor.dir开头 
+     * 如果操作非集合，则必须以vnd.android.cursor.item开头 
+     * */  
+    @Override  
+    public String getType(Uri uri) {  
+    Uri uri = Uri.parse("content://" + "cn.scu.myprovider" + "/user");  
+        switch(matcher.match(uri)){  
+        case USER:  
+            return "vnd.android.cursor.dir/user";  
+        case USER_ID:  
+            return "vnd.android.cursor.item/user";  
+        }  
+    } 
+```
+
+##### [3] ContentProvider的主要方法
+
+> public boolean onCreate()
+
+　　ContentProvider创建后或打开系统后其它应用第一次访问该ContentProvider时调用。
+
+> public Uri insert(Uri uri, ContentValues values)
+
+　　外部应用向ContentProvider中添加数据。
+
+> public int delete(Uri uri, String selection, String[] selectionArgs)
+
+　　外部应用从ContentProvider删除数据。
+
+> public int update(Uri uri, ContentValues values, String selection, String[] selectionArgs)：
+
+　　外部应用更新ContentProvider中的数据。
+
+> public Cursor query(Uri uri, String[] projection, String selection, String[] selectionArgs, String sortOrder)　
+
+　　供外部应用从ContentProvider中获取数据。 　
+
+> public String getType(Uri uri)
+
+　　该方法用于返回当前Url所代表数据的MIME类型。
+
+##### [4] ContentResolver
+
+　　ContentResolver通过URI来查询ContentProvider中提供的数据。除了URI以 外，还必须知道需要获取的数据段的名称，以及此数据段的数据类型。如果你需要获取一个特定的记录，你就必须知道当前记录的ID，也就是URI中D部分。
+
+　　ContentResolver 类提供了与ContentProvider类相同签名的四个方法：
+
+> public Uri insert(Uri uri, ContentValues values)　//添加
+
+> public int delete(Uri uri, String selection, String[] selectionArgs)　//删除
+>
+> public int update(Uri uri, ContentValues values, String selection, String[] selectionArgs)　//更新
+>
+> public Cursor query(Uri uri, String[] projection, String selection, String[] selectionArgs, String sortOrder)//获取
+
+实例代码：
+
+```
+ContentResolver resolver =  getContentResolver();
+Uri uri = Uri.parse("content://cn.scu.myprovider/user");
+
+//添加一条记录
+ContentValues values = new ContentValues();
+values.put("name", "fanrunqi");
+values.put("age", 24);
+resolver.insert(uri, values);  
+
+//获取user表中所有记录
+Cursor cursor = resolver.query(uri, null, null, null, "userid desc");
+while(cursor.moveToNext()){
+   //操作
+}
+
+//把id为1的记录的name字段值更改新为finch
+ContentValues updateValues = new ContentValues();
+updateValues.put("name", "finch");
+Uri updateIdUri = ContentUris.withAppendedId(uri, 1);
+resolver.update(updateIdUri, updateValues, null, null);
+
+//删除id为2的记录
+Uri deleteIdUri = ContentUris.withAppendedId(uri, 2);
+resolver.delete(deleteIdUri, null, null);
+```
+
+##### [5] ContentObserver
+
+　　　 ContentObserver(内容观察者)，目的是观察特定Uri引起的数据库的变化，继而做一些相应的处理，它类似于数据库技术中的触发器(Trigger)，当ContentObserver所观察的Uri发生变化时，便会触发它.
+
+```
+下面是使用内容观察者监听短信的例子：
+public class MainActivity extends Activity {
+ 
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+         
+//注册观察者Observser    
+this.getContentResolver().registerContentObserver(Uri.parse("content://sms"),true,new SMSObserver(new Handler()));
+ 
+    }
+ 
+    private final class SMSObserver extends ContentObserver {
+ 
+        public SMSObserver(Handler handler) {
+            super(handler);
+ 
+        }
+ 
+     
+        @Override
+        public void onChange(boolean selfChange) {
+ 
+ Cursor cursor = MainActivity.this.getContentResolver().query(
+Uri.parse("content://sms/inbox"), null, null, null, null);
+ 
+            while (cursor.moveToNext()) {
+                StringBuilder sb = new StringBuilder();
+ 
+                sb.append("address=").append(
+                        cursor.getString(cursor.getColumnIndex("address")));
+ 
+                sb.append(";subject=").append(
+                        cursor.getString(cursor.getColumnIndex("subject")));
+ 
+                sb.append(";body=").append(
+                        cursor.getString(cursor.getColumnIndex("body")));
+ 
+                sb.append(";time=").append(
+                        cursor.getLong(cursor.getColumnIndex("date")));
+ 
+                System.out.println("--------has Receivered SMS::" + sb.toString());
+ 
+                 
+            }
+ 
+        }
+ 
+    }
+}
+```
+
+同时可以在ContentProvider发生数据变化时调用 getContentResolver().notifyChange(uri, null)来通知注册在此URI上的访问者。
+
+　　
+
+```
+public class UserContentProvider extends ContentProvider {
+   public Uri insert(Uri uri, ContentValues values) {
+      db.insert("user", "userid", values);
+      getContext().getContentResolver().notifyChange(uri, null);
+   }
+}
+```
+
+##### [6] 实例说明
+
+　　数据源是SQLite, 用ContentResolver操作ContentProvider。
+
+![img](https://camo.githubusercontent.com/1302cfe3a60f9edf38daa5202d006ea98ae7d9af/687474703a2f2f696d672e626c6f672e6373646e2e6e65742f3230313630353035313935313433303939)
+
+Constant.java（储存一些常量）
+
+```
+public class Constant {  
+      
+    public static final String TABLE_NAME = "user";  
+      
+    public static final String COLUMN_ID = "_id";  
+    public static final String COLUMN_NAME = "name";  
+       
+       
+    public static final String AUTOHORITY = "cn.scu.myprovider";  
+    public static final int ITEM = 1;  
+    public static final int ITEM_ID = 2;  
+       
+    public static final String CONTENT_TYPE = "vnd.android.cursor.dir/user";  
+    public static final String CONTENT_ITEM_TYPE = "vnd.android.cursor.item/user";  
+       
+    public static final Uri CONTENT_URI = Uri.parse("content://" + AUTOHORITY + "/user");  
+}  
+```
+
+DBHelper.java(操作数据库)
+
+```
+public class DBHelper extends SQLiteOpenHelper {  
+  
+    private static final String DATABASE_NAME = "finch.db";    
+    private static final int DATABASE_VERSION = 1;    
+  
+    public DBHelper(Context context) {  
+        super(context, DATABASE_NAME, null, DATABASE_VERSION);  
+    }  
+  
+    @Override  
+    public void onCreate(SQLiteDatabase db)  throws SQLException {  
+        //创建表格  
+        db.execSQL("CREATE TABLE IF NOT EXISTS "+ Constant.TABLE_NAME + "("+ Constant.COLUMN_ID +" INTEGER PRIMARY KEY AUTOINCREMENT," + Constant.COLUMN_NAME +" VARCHAR NOT NULL);");  
+    }  
+  
+    @Override  
+    public void onUpgrade(SQLiteDatabase db, int oldVersion, int newVersion)  throws SQLException {  
+        //删除并创建表格  
+        db.execSQL("DROP TABLE IF EXISTS "+ Constant.TABLE_NAME+";");  
+        onCreate(db);  
+    }  
+}  
+```
+
+　MyProvider.java(自定义的ContentProvider)　
+
+```
+public class MyProvider extends ContentProvider {    
+    
+    DBHelper mDbHelper = null;    
+    SQLiteDatabase db = null;    
+    
+    private static final UriMatcher mMatcher;    
+    static{    
+        mMatcher = new UriMatcher(UriMatcher.NO_MATCH);    
+        mMatcher.addURI(Constant.AUTOHORITY,Constant.TABLE_NAME, Constant.ITEM);    
+        mMatcher.addURI(Constant.AUTOHORITY, Constant.TABLE_NAME+"/#", Constant.ITEM_ID);    
+    }    
+    
+  
+    @Override    
+    public String getType(Uri uri) {    
+        switch (mMatcher.match(uri)) {    
+        case Constant.ITEM:    
+            return Constant.CONTENT_TYPE;    
+        case Constant.ITEM_ID:    
+            return Constant.CONTENT_ITEM_TYPE;    
+        default:    
+            throw new IllegalArgumentException("Unknown URI"+uri);    
+        }    
+    }    
+    
+    @Override    
+    public Uri insert(Uri uri, ContentValues values) {    
+        // TODO Auto-generated method stub    
+        long rowId;    
+        if(mMatcher.match(uri)!=Constant.ITEM){    
+            throw new IllegalArgumentException("Unknown URI"+uri);    
+        }    
+        rowId = db.insert(Constant.TABLE_NAME,null,values);    
+        if(rowId>0){    
+            Uri noteUri=ContentUris.withAppendedId(Constant.CONTENT_URI, rowId);    
+            getContext().getContentResolver().notifyChange(noteUri, null);    
+            return noteUri;    
+        }    
+    
+        throw new SQLException("Failed to insert row into " + uri);    
+    }    
+    
+    @Override    
+    public boolean onCreate() {    
+        // TODO Auto-generated method stub    
+        mDbHelper = new DBHelper(getContext());    
+    
+        db = mDbHelper.getReadableDatabase();    
+    
+        return true;    
+    }    
+    
+    @Override    
+    public Cursor query(Uri uri, String[] projection, String selection,    
+            String[] selectionArgs, String sortOrder) {    
+        // TODO Auto-generated method stub    
+        Cursor c = null;    
+        switch (mMatcher.match(uri)) {    
+        case Constant.ITEM:    
+            c =  db.query(Constant.TABLE_NAME, projection, selection, selectionArgs, null, null, sortOrder);    
+            break;    
+        case Constant.ITEM_ID:    
+            c = db.query(Constant.TABLE_NAME, projection,Constant.COLUMN_ID + "="+uri.getLastPathSegment(), selectionArgs, null, null, sortOrder);    
+            break;    
+        default:    
+            throw new IllegalArgumentException("Unknown URI"+uri);    
+        }    
+    
+        c.setNotificationUri(getContext().getContentResolver(), uri);    
+        return c;    
+    }    
+    
+    @Override    
+    public int update(Uri uri, ContentValues values, String selection,    
+            String[] selectionArgs) {    
+        // TODO Auto-generated method stub    
+        return 0;    
+    }
+
+	@Override
+	public int delete(Uri uri, String selection, String[] selectionArgs) {
+		// TODO Auto-generated method stub
+		return 0;
+	}    
+    
+}    
+```
+
+MainActivity.java(ContentResolver操作)
+
+```
+public class MainActivity extends Activity {
+    private ContentResolver mContentResolver = null; 
+    private Cursor cursor = null;  
+         @Override
+        protected void onCreate(Bundle savedInstanceState) {
+        	// TODO Auto-generated method stub
+        	super.onCreate(savedInstanceState);
+        	setContentView(R.layout.activity_main);
+        	
+        	   TextView tv = (TextView) findViewById(R.id.tv);
+				
+        		mContentResolver = getContentResolver();  
+        		tv.setText("添加初始数据 ");
+                for (int i = 0; i < 10; i++) {  
+                    ContentValues values = new ContentValues();  
+                    values.put(Constant.COLUMN_NAME, "fanrunqi"+i);  
+                    mContentResolver.insert(Constant.CONTENT_URI, values);  
+                } 
+                
+            	tv.setText("查询数据 ");
+                cursor = mContentResolver.query(Constant.CONTENT_URI, new String[]{Constant.COLUMN_ID,Constant.COLUMN_NAME}, null, null, null);  
+                if (cursor.moveToFirst()) {
+                	String s = cursor.getString(cursor.getColumnIndex(Constant.COLUMN_NAME));
+                	tv.setText("第一个数据： "+s);
+                }
+        }
+         
+}  
+```
+
+最后在manifest申明
+
+```
+<provider android:name="MyProvider" android:authorities="cn.scu.myprovider" />
+```
+
+## 【BroadcastReceiver详细解析】
+
+##### [1] BroadcastReceiver的定义
+
+广播是一种广泛运用的在应用程序之间传输信息的机制，主要用来监听系统或者应用发出的广播信息，然后根据广播信息作为相应的逻辑处理，也可以用来传输少量、频率低的数据。
+
+在实现开机启动服务和网络状态改变、电量变化、短信和来电时通过接收系统的广播让应用程序作出相应的处理。
+
+BroadcastReceiver **自身并不实现图形用户界面**，但是当它收到某个通知后， BroadcastReceiver 可以通过启动 Service 、启动 Activity 或是 NotificationMananger 提醒用户。
+
+##### [2] BroadcastReceiver使用注意
+
+　　当系统或应用发出广播时，将会扫描系统中的所有广播接收者，通过action匹配将广播发送给相应的接收者，接收者收到广播后将会产生一个广播接收者的实例，执行其中的onReceiver()这个方法；特别需要注意的是这个实例的生命周期只有10秒，如果10秒内没执行结束onReceiver()，系统将会报错。
+
+在onReceiver()执行完毕之后，该实例将会被销毁，所以不要在onReceiver()中执行耗时操作，也不要在里面创建子线程处理业务（因为可能子线程没处理完，接收者就被回收了，那么子线程也会跟着被回收掉）；正确的处理方法就是通过in调用activity或者service处理业务。
+
+##### [3] BroadcastReceiver的注册
+
+　　BroadcastReceiver的注册方式有且只有两种，一种是**静态注册**（推荐使用），另外一种是**动态注册**，广播接收者在注册后就开始监听系统或者应用之间发送的广播消息。
+
+**接收短信广播示例**：
+
+定义自己的BroadcastReceiver 类
+
+```
+public class MyBroadcastReceiver extends BroadcastReceiver {
+ 
+// action 名称
+String SMS_RECEIVED = "android.provider.Telephony.SMS_RECEIVED" ;
+ 
+    public void onReceive(Context context, Intent intent) {
+ 
+       if (intent.getAction().equals( SMS_RECEIVED )) {
+           // 一个receiver可以接收多个action的，即可以有多个intent-filter，需要在onReceive里面对intent.getAction(action name)进行判断。
+       }
+    }
+}
+```
+
+**静态方式**
+
+　　在AndroidManifest.xml的application里面定义receiver并设置要接收的action。
+
+```
+< receiver android:name = ".MyBroadcastReceiver" > 
+
+ < intent-filter android:priority = "777" >             
+<action android:name = "android.provider.Telephony.SMS_RECEIVED" />
+</ intent-filter > 
+
+</ receiver >
+```
+
+　　这里的priority取值是-1000到1000，值越大优先级越高，同时注意加上系统接收短信的限权。
+
+```
+< uses-permission android:name ="android.permission.RECEIVE_SMS" />
+```
+
+　　静态注册的广播接收者是一个常驻在系统中的全局监听器，当你在应用中配置了一个静态的BroadcastReceiver，安装了应用后而无论应用是否处于运行状态，广播接收者都是已经常驻在系统中了。同时应用里的所有receiver都在清单文件里面，方便查看。要销毁掉静态注册的广播接收者，可以通过调用PackageManager将Receiver禁用。
+
+**动态方式**
+
+　　在Activity中声明BroadcastReceiver的扩展对象，在onResume中注册，onPause中卸载. 　　　
+
+```
+public class MainActivity extends Activity {
+	MyBroadcastReceiver receiver;
+	@Override
+	 protected void onResume() {
+		// 动态注册广播 (代码执行到这才会开始监听广播消息，并对广播消息作为相应的处理)
+		receiver = new MyBroadcastReceiver();
+		IntentFilter intentFilter = new IntentFilter( "android.provider.Telephony.SMS_RECEIVED" );
+		registerReceiver( receiver , intentFilter);	
+		super.onResume();
+	}
+	@Override
+	protected void onPause() {  
+		// 撤销注册 (撤销注册后广播接收者将不会再监听系统的广播消息)
+		unregisterReceiver(receiver);
+		super.onPause();
+	}
+}
+```
+
+**静态注册和动态注册的区别**
+
+　　1、静态注册的广播接收者一经安装就常驻在系统之中，不需要重新启动唤醒接收者；动态注册的广播接收者随着应用的生命周期，由registerReceiver开始监听，由unregisterReceiver撤销监听，如果应用退出后，没有撤销已经注册的接收者应用应用将会报错。
+
+　　2、当广播接收者通过intent启动一个activity或者service时，如果intent中无法匹配到相应的组件。动态注册的广播接收者将会导致应用报错 而静态注册的广播接收者将不会有任何报错，因为自从应用安装完成后，广播接收者跟应用已经脱离了关系。　
+
+##### [4] 发送BroadcastReceiver
+
+**发送广播主要有两种类型：**
+
+**普通广播**
+
+应用在需要通知各个广播接收者的情况下使用，如 开机启动
+
+使用方法：sendBroadcast()
+
+```
+Intent intent = new Intent("android.provider.Telephony.SMS_RECEIVED"); 
+//通过intent传递少量数据
+intent.putExtra("data", "finch"); 
+// 发送普通广播
+sendBroadcast(Intent); 
+```
+
+　　普通广播是完全异步的，可以在同一时刻（逻辑上）被所有接收者接收到，所有满足条件的 BroadcastReceiver 都会随机地执行其 onReceive() 方法。 　　同级别接收是先后是随机的；级别低的收到广播； 　　消息传递的效率比较高，并且无法中断广播的传播。
+
+**有序广播**
+
+应用在需要有特定拦截的场景下使用，如黑名单短信、电话拦截。　
+
+使用方法：
+
+　`sendOrderedBroadcast(intent, receiverPermission);`
+
+　`receiverPermission` ：一个接收器必须持以接收您的广播。如果为 null ，不经许可的要求（一般都为null）。
+
+```
+//发送有序广播
+ sendOrderedBroadcast(intent, null);
+```
+
+　　在有序广播中，我们可以在前一个广播接收者将处理好的数据传送给后面的广播接收者，也可以调用abortBroadcast()来终结广播的传播。
+
+```
+public void onReceive(Context arg0, Intent intent) {
+　　//获取上一个广播的bundle数据
+　　Bundle bundle = getResultExtras(true);//true：前一个广播没有结果时创建新的Bundle；false：不创建Bundle
+　　bundle.putString("key", "777");
+　　//将bundle数据放入广播中传给下一个广播接收者
+　　setResultExtras(bundle);　
+　　
+　　//终止广播传给下一个广播接收者
+　　abortBroadcast();
+}
+```
+
+　　高级别的广播收到该广播后，可以决定把该广播是否截断掉。 　　同级别接收是先后是随机的，如果先接收到的把广播截断了，同级别的例外的接收者是无法收到该广播。 　　
+
+异步广播
+
+使用方法：`sendStickyBroadcast()` ：
+
+　　发出的Intent当接收Activity（动态注册）重新处于onResume状态之后就能重新接受到其Intent.（the Intent will be held to be re-broadcast to future receivers）。就是说sendStickyBroadcast发出的最后一个Intent会被保留，下次当Activity处于活跃的时候又会接受到它。
+
+发这个广播需要权限：
+
+```
+<uses-permission android:name="android.permission.BROADCAST_STICKY" />
+```
+
+卸载该广播：
+
+```
+removeStickyBroadcast(intent);
+```
+
+　　在卸载之前该intent会保留，接收者在可接收状态都能获得。
+
+**异步有序广播**
+
+　　使用方法：`sendStickyOrderedBroadcast(intent, resultReceiver, scheduler, initialCode, initialData, initialExtras)`：
+
+　　这个方法具有有序广播的特性也有异步广播的特性； 　　同时需要限权：
+
+```
+ <uses-permission android:name="android.permission.BROADCAST_STICKY" /> 
+```
+
+##### [5] 总结
+
+- 静态广播接收的处理器是由PackageManagerService负责，当手机启动或者新安装了应用的时候，PackageManagerService会扫描手机中所有已安装的APP应用，将AndroidManifest.xml中有关注册广播的信息解析出来，存储至一个全局静态变量当中。
+- 动态广播接收的处理器是由ActivityManagerService负责，当APP的服务或者进程起来之后，执行了注册广播接收的代码逻辑，即进行加载，最后会存储在一个另外的全局静态变量中。需要注意的是：
+
+　　 1、 这个并非是一成不变的，当程序被杀死之后，已注册的动态广播接收器也会被移出全局变量，直到下次程序启动，再进行动态广播的注册，当然这里面的顺序也已经变更了一次。
+
+　　 2、这里也并没完整的进行广播的排序，只记录的注册的先后顺序，并未有结合优先级的处理。
+
+- 广播发出的时候，广播接收者接收的顺序如下：
+
+　　１．当广播为**普通广播**时，有如下的接收顺序：
+
+无视优先级
+
+动态优先于静态 
+
+同优先级的动态广播接收器，**先注册的大于后注册的**
+
+同优先级的静态广播接收器，**先扫描的大于后扫描的**　
+
+　　２．如果广播为**有序广播**，那么会将动态广播处理器和静态广播处理器合并在一起处理广播的消息，最终确定广播接收的顺序：
+
+优先级高的先接收　 　　
+
+同优先级的动静态广播接收器，**动态优先于静态** 　　
+
+同优先级的动态广播接收器，**先注册的大于后注册的** 　　
+
+同优先级的静态广播接收器，**先扫描的大于后扫描的**　
+
+##### [6]一些常用的系统广播的action 和permission
+
+- 开机启动
+
+```
+<action android:name="android.intent.action.BOOT_COMPLETED"/> 
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />  
+```
+
+- 网络状态
+
+```
+<action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>  
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> 
+```
+
+　　　网络是否可用的方法：
+
+```
+  public static boolean isNetworkAvailable(Context context) {  
+        ConnectivityManager mgr = (ConnectivityManager) context.getSystemService(Context.CONNECTIVITY_SERVICE);  
+        NetworkInfo[] info = mgr.getAllNetworkInfo();  
+        if (info != null) {  
+            for (int i = 0; i < info.length; i++) {  
+      if (info[i].getState() == NetworkInfo.State.CONNECTED) {  
+                    return true;  
+                }  
+            }  
+        }  
+        return false;  
+    } 
+```
+
+- 电量变化
+
+```
+<action android:name="android.intent.action.BATTERY_CHANGED"/>  
+```
+
+BroadcastReceiver 的onReceive方法：
+
+```
+public void onReceive(Context context, Intent intent) {  
+        int currLevel = intent.getIntExtra(BatteryManager.EXTRA_LEVEL, 0);  //当前电量  　
+        
+        int total = intent.getIntExtra(BatteryManager.EXTRA_SCALE, 1);    //总电量  
+        int percent = currLevel * 100 / total;  
+        Log.i(TAG, "battery: " + percent + "%");  
+    }  
+```
+
+
 
 # 安卓开发之路第一天（8.16）
 
