--- a/安卓开发/安卓开发日记.md
+++ b/安卓开发/安卓开发日记.md
@@ -39,7 +39,23 @@
 
 ##### [1] Activity是什么？
 
-我们都知道android中有四大组件（Activity 活动，Service 服务，Content Provider 内容提供者，BroadcastReceiver 广播接收器），Activity是我们用的最多也是最基本的组件，因为应用的所有操作都与用户相关，Activity 提供窗口来和用户进行交互。
+> **Android 程序核心组件:**
+>
+> **View**: 界面视图,组织 UI 控件 
+>
+> **Intent**: 意图,支持组件间通信 
+>
+> **Activity**: 处理界面与 UI 互动 
+>
+> **Content Provider**: 存储共享数据 
+>
+> **IntentReceiver**: 接收信息及事件处理
+>
+> **Service**: 后台服务(如硬件与驱动的服务) 
+>
+> **Notification**: 消息与通知。
+
+我们都知道android中有四大组件（**Activity 活动，Service 服务，Content Provider 内容提供者，BroadcastReceiver 广播接收器**），Activity是我们用的最多也是最基本的组件，因为应用的所有操作都与用户相关，Activity 提供窗口来和用户进行交互。
 
 官方文档这么说： 　　
 
@@ -4183,14 +4199,18 @@ public class ChooseAreaFragment extends Fragment {
 
 # 安卓开发之路第十一天（8.27）
 
-# 安卓开发之路第十一天（8.28）
+# 安卓开发之路第十二天（8.28）
 
-# 安卓开发之路第十一天（8.29）
+# 安卓开发之路第十三天（8.29）
 
-# 安卓开发之路第十一天（8.30）
+# 安卓开发之路第十四天（8.30）
 
-# 安卓开发之路第十一天（8.31）
+# 安卓开发之路第十五天（8.31）
 
-# 安卓开发之路第十一天（9.1）
+# 安卓开发之路第十六天（9.1）
 
 ##### 1. 学习安卓 https://github.com/linsir6/AndroidNote
+
+# 安卓开发之路第十七天（9.2）
+
+#### 《14天学会安卓开发》
